# shape-nets

./: README.md  pyproject.toml
experiments/: model_comparison.py  quick_plots.py  speed_comparison.py
experiments/classification/deltaconv/: evaluate_shrec.py  run_experiments.py  shape_utils.py
experiments/classification/diffnet/: run_experiments.py  shape_classification.py  shape_utils.py
experiments/classification/pointnet/: run_experiments.py  shape_utils.py  shrec_evaluate.py  test_experiments.py
experiments/dataset_cleaners/: add_representations.py  cleaner_tools.py  human_segmentation_cleaner.py  rna_cleaner.py  rna_hks.py  shrec16_cleaner.py
experiments/noisy_data/: analysis.py  human_segmentation_cleaner.py  inference.py  plots.py  shape_utils.py
experiments/segmentation/deltaconv/: run_experiments.py  shape_utils.py
experiments/segmentation/diffnet/: run_experiments.py  shape_segmentation.py  shape_utils.py  worst_cases.py
experiments/segmentation/pointnet/: run_experiments.py  shape_utils.py
shapecentral/: __init__.py  shapes.py
shapecentral/mesh_central/: __init__.py  convert_mesh_tool.py  meshing_tool.py
shapecentral/networks/delta_conv/: __init__.py
shapecentral/networks/delta_conv/geometry/: __init__.py
shapecentral/networks/delta_conv/models/: deltanet_base.py  deltanet_classification.py  (+1 more)
shapecentral/networks/diffusion_net/: geometry.py  layers.py  utils.py
shapecentral/networks/point_net/: models.py  set_abstractions.py
shapecentral/representation/: __init__.py  laplace.py  shot.py  shot_utils.py  signature.py
(+4 files in other folders)
